# runway-mcp-server

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  runway_mcp_server.py  server.json
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
bmad/_cfg/: files-manifest.csv  manifest.yaml
bmad/_cfg/ides/: claude-code.yaml
bmad/bmm/: config.yaml
bmad/core/: config.yaml
config/: mcp_config_example.json
docs/: ALEPH_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  FEATURES.md  INDEX.md  PACKAGE_TRANSFORMATION_SUMMARY.md  PROJECT_SUMMARY.md  PUBLISHING_GUIDE.md  QUICKSTART.md  REVIEW_SUMMARY.md  START_HERE.md  TEST_RESULTS.md
examples/: example_usage.py
src/runway_mcp_server/: __init__.py  server.py
tests/: README.md  __init__.py  test_server.py
